# grpc-image-server

./: README.md  client.py  grpc_data.csv  image_server_pb2.py  image_server_pb2.pyi  image_server_pb2_grpc.py  pyproject.toml  pyrightconfig.json  server.py
protos/: image_server.proto
